--- a/index.html
+++ b/index.html
@@ -84,46 +84,45 @@
     <div class="content">
       <div class="intro">
         <p>
-          漩渦自有節奏，它裹挾人、改變人。
+          端一直希望記錄時代的漩渦。
         </p>
         <p>
-          漩渦嘈雜喧鬧，它縈繞人、困惑人。
+          我們把每一個新聞片段都看作正在快速消逝歷史的一部分，想在時代的背景畫面中，找到它的位置，明瞭它的含義，看懂它的指向。這許許多多的新聞碎片，因此可以串聯成一幅有意義的圖景，讓身在其中的人們，知道自己所經歷其實並不孤單，做出每一個選擇和判斷時，也有了對周遭世界的認知基礎。
         </p>
         <p>
-          充滿不確定性的時代，如漩渦般席捲而來。但總有那麼一些人，仍試圖在這樣的時代里追求獨立和理性的思考、清醒而明智的判斷，他們願意起身觀察外部世界的模樣，也努力推動生活現實里的點滴改變，他們堅守內心的準則和信念，也樂於傾聽不同的聲音和觀點。
+          事實上，這並不只是一個人，或者某一個小團體的工作。它原本就是一個更廣泛的參與過程，身處這時代不同位置的人，都分享對世界的熱情和理解它的過程，正如我們過去廣泛尋找全世界的創作者、撰稿人、意見提供者以及讀者，一起建構端時，希望努力的那樣。
         </p>
         <p>
-        理解我們所處的這個時代，并試著去說出時代漩渦的樣子。這是端傳媒一直努力在做的事情，也是端傳媒始終在尋找的同道。
+        上線十九個月以來，我們有幸能夠跟數千位華語世界的優秀創作者一道，在這個平台上記錄我們所身處的時代，并跟數以百萬計來自世界各地的讀者坦誠交流。
         </p>
         <p>
-        端傳媒連結起兩岸三地最優質的知識和人文資源，正式推出端傳媒會員計劃。現在就加入端傳媒社群，找到華語世界思維最開放的那群人。
+        我們想找到你們，需要你們的支持；我們更想創造一個空間，讓你們找到彼此。
         </p>
+        <p>自由的道路漫長，我們一起開端。</p>
       </div>
       <hr>
+      <div class="midtitle">
+        <h1>全球華語智識人文聯盟</h1>
+        <h1>跨越世代和同溫層的對話</h1>
+        <h1>華語世界頭腦最開放的一群人</h1>
+      </div>
       <img src="img/logo_b.png" class="logob">
       <div class="plansrow">
         <div class="plan">
           <div class="illustration"><img src="img/illus1.png" alt=""></div>
             <ul class="description">
-              <li>端傳媒×獨立書店「知識人文聯盟」<a class="giftlink" href="index.html#q4">Super Pass＊</a></li>
-              <li>優先參加端傳媒舉辦的人文沙龍、講座和KOL見面會</li>
-              <li>會員專屬社群和線下活動</li>
+              <li>端傳媒×獨立書店 <a class="giftlink" href="#">Super Pass</a></li>
+              <li>優先或免費參加端傳媒舉辦的各類沙龍、論壇、放映會等或會員專屬線下活動</li>
+              <li>加入會員專屬社群，跟端傳媒的編輯或作者交流互動</li>
             </ul>
-        </div>
-        <div class="plan">
-          <div class="illustration"><img src="img/illus2.png" alt=""></div>
-
-            <ul class="description">
-                <li style="margin-left: 20px;">端Mall購物9折優惠</li>
-              </ul>
-
         </div>
         <div class="plan">
           <div class="illustration"><img src="img/illus3.png" alt=""></div>
 
             <ul class="description">
-                <li>會員實體禮包（會員卡、會員背包及其他）</li>
-                <li><a class="giftlink" href="index.html#q1">更多福利</a></li>
+                <li>享有端Mall購物九折優惠，以及其他合作夥伴不定期提供的折扣或禮券</li>
+                <li>會員定制福袋一套</li>
+                <li><a class="giftlink" href="index.html#q1">更多信息</a></li>
               </ul>
 
         </div>
@@ -182,7 +181,7 @@
               "quantity": false
             },
             "text": {
-              "button": "成為會員"
+              "button": "加入會員"
             },
             "styles": {
               "product": {
@@ -292,105 +291,98 @@
       </div>
     </div>
     <div class="testimonial">
-      <div class="testrow">
+      <div class="testrow1">
         <div class="test1">
+          <img src="img/quote.svg" alt="">
+          <p class="quote">從未有過一個新成立的新聞網站可以拿到那麼多獎項。</p>
+          <p class="credit">—— 2015年人權新聞獎評審會</p>
+        </div>
+        <div class="test2">
           <img src="img/quote.svg" alt="">
           <p class="quote">A digital Magazine for all Chinese.</p>
           <p class="credit">—— Foreign Policy</p>
         </div>
-        <div class="test2">
-          <img src="img/quote.svg" alt="">
-          <p class="quote">A digital Magazine for all Chinese.</p>
-          <p class="credit">—— 龍應台</p>
-        </div>
       </div>
-      <div class="testrow">
+      <div class="testrow2">
         <div class="test1">
           <img src="img/quote.svg" alt="">
-          <p class="quote">A digital Magazine for all Chinese.</p>
-          <p class="credit">—— 梁文道</p>
+          <p class="quote">我每天讀著真正意義上的新聞，精神得到了前所未有的滿足...…我不會忘記我想要的自由的生活，我正當年輕，不論付出多少，我會戰勝我的孤獨，得到我的自由......我自己尋覓到了你們，你們給了我一個真實的世界，讓我在真實的感情中喜怒哀樂，不斷成長。</p>
+          <p class="credit">—— 讀者</p>
         </div>
         <div class="test2">
           <img src="img/quote.svg" alt="">
-          <p class="quote">A digital Magazine for all Chinese.</p>
-          <p class="credit">—— 梁文道</p>
+          <p class="quote">感謝你們兌現了諾言，我的華語新聞閱讀體驗真的被刷新！也讓我看到了認真的人還可以有希望！</p>
+          <p class="credit">—— 讀者</p>
         </div>
       </div>
     </div>
     <div class="content">
     	<div class="qaunit">
     		<div class="question" id="q1">
-    			<p>什麼是端會員？</p>
+    			<p>什麼是「端會員」？</p>
     		</div>
     		<div class="answer">
     			<p>“理想家”会员计划是理想国面向未来，思考、梳理、整合自身所长，筹备经年推出的特别会员计划。比起通常意义上的会员制，理想国尝试着养护一种“生态”，我们希望集合更多有着多元、开放价值观跟信念的人，寻找共同的未来。成为“理想家”后，可以加入网络社区，提出创意，分享观念；参与专属的作家在线交流、线下分享活动、观看独家视频、享受积分商城优惠；还可以申请志愿者，成为兼职、全职的伙伴。</p>
     		</div>
     		<div class="question" id="q2">
-    			<p>如何成為端會員？</p>
+    			<p>如何加入「端会员」？</p>
     		</div>
     		<div class="answer">
-    			<p>“理想家”会员计划是理想国面向未来，思考、梳理、整合自身所长，筹备经年推出的特别会员计划。比起通常意义上的会员制，理想国尝试着养护一种“生态”，我们希望集合更多有着多元、开放价值观跟信念的人，寻找共同的未来。成为“理想家”后，可以加入网络社区，提出创意，分享观念；参与专属的作家在线交流、线下分享活动、观看独家视频、享受积分商城优惠；还可以申请志愿者，成为兼职、全职的伙伴。</p>
+    			<p>点击<a class="giftlink" href="https://membership.theinitium.com" target="_blank">「端会员」页面</a>，立即购买加入。</p>
     		</div>
     		<div class="question" id="q3">
-    			<p>端會員有哪些權益？</p>
+    			<p>「端會員」有哪些權益？</p>
     		</div>
     		<div class="answer">
-    			<p>“理想家”会员计划是理想国面向未来，思考、梳理、整合自身所长，筹备经年推出的特别会员计划。比起通常意义上的会员制，理想国尝试着养护一种“生态”，我们希望集合更多有着多元、开放价值观跟信念的人，寻找共同的未来。成为“理想家”后，可以加入网络社区，提出创意，分享观念；参与专属的作家在线交流、线下分享活动、观看独家视频、享受积分商城优惠；还可以申请志愿者，成为兼职、全职的伙伴。</p>
+          <ul>
+    			<li>會員活動特權：獲得端傳媒舉辦的各類特色活動（沙龍、論壇、讀書會、放映會、開放日、旅行）的免費或優先參與資格；參與跟端傳媒編輯部、撰稿人和KOL的線上或線下交流，每月至少一次（僅限會員）；</li>
+          <li>端傳媒×獨立書店 Super Pass ：在港台最重要的獨立書店或人文空間，獲得「端會員」專屬的購書優惠或相關特權；</li>
+          <li>會員專屬社群：加入端傳媒會員社群，結識華語世界最有想法的頭腦，參與跨越同溫層的討論和對話；</li>
+          <li>會員獨家優惠：享有在端Mall購物的九折優惠；不定期享有端傳媒合作夥伴提供的獨家優惠、折扣或入場券；</li>
+          <li>會員福袋：實體會員卡一張；會員定制帆布袋一個；</li>
+          <li>神秘福利</li>
+          </ul>
     		</div>
     		<div class="question" id="q4">
-    			<p>什麼是SuperPass？</p>
+    			<p>端傳媒×獨立書店Super Pass可以在哪些書店使用？</p>
     		</div>
     		<div class="answer">
-    			<p>“理想家”会员计划是理想国面向未来，思考、梳理、整合自身所长，筹备经年推出的特别会员计划。比起通常意义上的会员制，理想国尝试着养护一种“生态”，我们希望集合更多有着多元、开放价值观跟信念的人，寻找共同的未来。成为“理想家”后，可以加入网络社区，提出创意，分享观念；参与专属的作家在线交流、线下分享活动、观看独家视频、享受积分商城优惠；还可以申请志愿者，成为兼职、全职的伙伴。</p>
+    			<p>書店清單和優惠細則在<a class="giftlink" href="#" target="_blank">這裡</a>（不斷增長中......）歡迎自薦：membership@theinitium.com</p>
     		</div>
         <div class="question" id="q5">
-          <p>什麼是SuperPass？</p>
+          <p>如何獲得活動的優先報名資格？</p>
         </div>
         <div class="answer">
-          <p>“理想家”会员计划是理想国面向未来，思考、梳理、整合自身所长，筹备经年推出的特别会员计划。比起通常意义上的会员制，理想国尝试着养护一种“生态”，我们希望集合更多有着多元、开放价值观跟信念的人，寻找共同的未来。成为“理想家”后，可以加入网络社区，提出创意，分享观念；参与专属的作家在线交流、线下分享活动、观看独家视频、享受积分商城优惠；还可以申请志愿者，成为兼职、全职的伙伴。</p>
+          <p>「端會員」計劃推出後，會不定期通過郵件和群組向會員發送活動訊息和參與方式。</p>
         </div>
         <div class="question" id="q6">
-          <p>什麼是SuperPass？</p>
+          <p>可以在「端會員」社群裡做什麼？</p>
         </div>
         <div class="answer">
-          <p>“理想家”会员计划是理想国面向未来，思考、梳理、整合自身所长，筹备经年推出的特别会员计划。比起通常意义上的会员制，理想国尝试着养护一种“生态”，我们希望集合更多有着多元、开放价值观跟信念的人，寻找共同的未来。成为“理想家”后，可以加入网络社区，提出创意，分享观念；参与专属的作家在线交流、线下分享活动、观看独家视频、享受积分商城优惠；还可以申请志愿者，成为兼职、全职的伙伴。</p>
+          <p>可以在「端會員」社群裡發帖、跟其他會員交流，參與線上直播或互動。端傳媒的編輯、撰稿人們也將不定期進入社群，跟大家交流。</p>
+          <p>有任何建議、疑問，都可以在社群中留言，小端將一一回复。</p>
         </div>
         <div class="question" id="q7">
-          <p>什麼是SuperPass？</p>
+          <p>成功購買「端會員」後會發生什麼？</p>
         </div>
         <div class="answer">
-          <p>“理想家”会员计划是理想国面向未来，思考、梳理、整合自身所长，筹备经年推出的特别会员计划。比起通常意义上的会员制，理想国尝试着养护一种“生态”，我们希望集合更多有着多元、开放价值观跟信念的人，寻找共同的未来。成为“理想家”后，可以加入网络社区，提出创意，分享观念；参与专属的作家在线交流、线下分享活动、观看独家视频、享受积分商城优惠；还可以申请志愿者，成为兼职、全职的伙伴。</p>
+          <ul>
+          <li>收到確認郵件</li>
+          <li>來自端傳媒主編的一封歡迎信</li>
+          <li>經本人確認後，加入社群</li>
+          <li>定制會員福袋（10-15個工作日的製作週期）</li>
+          <ul>
         </div>
         <div class="question" id="q8">
-          <p>什麼是SuperPass？</p>
+          <p>還有問題？</p>
         </div>
         <div class="answer">
-          <p>“理想家”会员计划是理想国面向未来，思考、梳理、整合自身所长，筹备经年推出的特别会员计划。比起通常意义上的会员制，理想国尝试着养护一种“生态”，我们希望集合更多有着多元、开放价值观跟信念的人，寻找共同的未来。成为“理想家”后，可以加入网络社区，提出创意，分享观念；参与专属的作家在线交流、线下分享活动、观看独家视频、享受积分商城优惠；还可以申请志愿者，成为兼职、全职的伙伴。</p>
-        </div>
-        <div class="question" id="q9">
-          <p>什麼是SuperPass？</p>
-        </div>
-        <div class="answer">
-          <p>“理想家”会员计划是理想国面向未来，思考、梳理、整合自身所长，筹备经年推出的特别会员计划。比起通常意义上的会员制，理想国尝试着养护一种“生态”，我们希望集合更多有着多元、开放价值观跟信念的人，寻找共同的未来。成为“理想家”后，可以加入网络社区，提出创意，分享观念；参与专属的作家在线交流、线下分享活动、观看独家视频、享受积分商城优惠；还可以申请志愿者，成为兼职、全职的伙伴。</p>
-        </div>
-        <div class="question" id="q10">
-          <p>什麼是SuperPass？</p>
-        </div>
-        <div class="answer">
-          <p>“理想家”会员计划是理想国面向未来，思考、梳理、整合自身所长，筹备经年推出的特别会员计划。比起通常意义上的会员制，理想国尝试着养护一种“生态”，我们希望集合更多有着多元、开放价值观跟信念的人，寻找共同的未来。成为“理想家”后，可以加入网络社区，提出创意，分享观念；参与专属的作家在线交流、线下分享活动、观看独家视频、享受积分商城优惠；还可以申请志愿者，成为兼职、全职的伙伴。</p>
+          <p>歡迎聯繫我們：membership@theinitium.com</p>
         </div>
     	</div>
     </div>
     <div class="footer">
-      <p>
-      Lorem ipsum dolor sit amet, appareat erroribus duo ei. In vix adhuc dicam, has dolorem detraxit cu. Cum at falli quidam mnesarchum, qui eu mazim graeco legendos. Idque appellantur ne eam, iuvaret numquam delectus sed no. Vim ne dolor soleat comprehensam.
-      </p>
-      <p>
-      Lorem ipsum dolor sit amet, appareat erroribus duo ei. In vix adhuc dicam, has dolorem detraxit cu. Cum at falli quidam mnesarchum, qui eu mazim graeco legendos. Idque appellantur ne eam, iuvaret numquam delectus sed no. Vim ne dolor soleat comprehensam.
-      </p>
-      <p>
-      Lorem ipsum dolor sit amet, appareat erroribus duo ei. In vix adhuc dicam, has dolorem detraxit cu. Cum at falli quidam mnesarchum, qui eu mazim graeco legendos. Idque appellantur ne eam, iuvaret numquam delectus sed no. Vim ne dolor soleat comprehensam.
-      </p>
+      
     </div>
   </body>
 </html>
