updated qa section

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     			<p>什麼是「端會員」？</p>
     		</div>
     		<div class="answer">
-    			<p>“理想家”会员计划是理想国面向未来，思考、梳理、整合自身所长，筹备经年推出的特别会员计划。比起通常意义上的会员制，理想国尝试着养护一种“生态”，我们希望集合更多有着多元、开放价值观跟信念的人，寻找共同的未来。成为“理想家”后，可以加入网络社区，提出创意，分享观念；参与专属的作家在线交流、线下分享活动、观看独家视频、享受积分商城优惠；还可以申请志愿者，成为兼职、全职的伙伴。</p>
+    			<p>我們梳理過往經驗，整合自身所長，籌備數月后，正式推出「端會員」計劃。希望藉此回應讀者的需求和互聯網時代的新聞媒體創新趨勢，連結華語世界優質的人文資源，為端的讀者提供更為精細和深入的服務。相比通常傳統意義上的会员計劃，「端會員」更想要創造一個社群，聚集華語世界頭腦最為開放、抱持多元信念的一群人，在這裡進行跨越世代和同溫層的對話。</p>
     		</div>
     		<div class="question" id="q2">
     			<p>如何加入「端会员」？</p>
