--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="plan">
           <div class="illustration"><img src="img/illus1.png" alt=""></div>
             <ul class="description">
-              <li>端傳媒×獨立書店 <a class="giftlink" href="#">Super Pass</a></li>
+              <li>端傳媒×獨立書店 <a class="giftlink" href="https://theinitium.com/article/membership-bookstore-list/" target="_blank">Super Pass</a></li>
               <li>優先或免費參加端傳媒舉辦的各類沙龍、論壇、放映會等或會員專屬線下活動</li>
               <li>加入會員專屬社群，跟端傳媒的編輯或作者交流互動</li>
             </ul>
@@ -347,7 +347,7 @@
     			<p>端傳媒×獨立書店Super Pass可以在哪些書店使用？</p>
     		</div>
     		<div class="answer">
-    			<p>書店清單和優惠細則在<a class="giftlink" href="#" target="_blank">這裡</a>（不斷增長中......）歡迎自薦：membership@theinitium.com</p>
+    			<p>書店清單和優惠細則在<a class="giftlink" href="https://theinitium.com/article/membership-bookstore-list/" target="_blank">這裡</a>（不斷增長中......）歡迎自薦：membership@theinitium.com</p>
     		</div>
         <div class="question" id="q5">
           <p>如何獲得活動的優先報名資格？</p>
