--- a/index.html
+++ b/index.html
@@ -328,14 +328,15 @@
     			<p>如何加入「端会员」？</p>
     		</div>
     		<div class="answer">
-    			<p>点击<a class="giftlink" href="https://membership.theinitium.com" target="_blank">「端会员」页面</a>，立即购买加入。</p>
+    			<p>點擊<a class="giftlink" href="https://membership.theinitium.com" target="_blank">「端會員」頁面</a>，立即購買加入。</p>
     		</div>
     		<div class="question" id="q3">
     			<p>「端會員」有哪些權益？</p>
     		</div>
     		<div class="answer">
           <ul>
-    			<li>會員活動特權：獲得端傳媒舉辦的各類特色活動（沙龍、論壇、讀書會、放映會、開放日、旅行）的免費或優先參與資格；參與跟端傳媒編輯部、撰稿人和KOL的線上或線下交流，每月至少一次（僅限會員）；</li>
+    			<li>會員活動特權：每月至少一次，獲得端傳媒舉辦的各類付費活動（沙龍、論壇、讀書會、放映會、旅行）的免費或優先參與資格；</li>
+          <li>僅限會員的端小聚：每月一次，端會員將被邀請跟端傳媒編輯部、撰稿人和華語世界最有影響力的KOL喝咖啡、餐敘，或參加端傳媒年會、內部派對；</li>
           <li>端傳媒×獨立書店 Super Pass ：在港台最重要的獨立書店或人文空間，獲得「端會員」專屬的購書優惠或相關特權；</li>
           <li>會員專屬社群：加入端傳媒會員社群，結識華語世界最有想法的頭腦，參與跨越同溫層的討論和對話；</li>
           <li>會員獨家優惠：享有在端Mall購物的九折優惠；不定期享有端傳媒合作夥伴提供的獨家優惠、折扣或入場券；</li>
@@ -344,7 +345,7 @@
           </ul>
     		</div>
     		<div class="question" id="q4">
-    			<p>端傳媒×獨立書店Super Pass可以在哪些書店使用？</p>
+    			<p>端傳媒×獨立書店 Super Pass 可以在哪些書店使用？</p>
     		</div>
     		<div class="answer">
     			<p>書店清單和優惠細則在<a class="giftlink" href="https://theinitium.com/article/membership-bookstore-list/" target="_blank">這裡</a>（不斷增長中......）歡迎自薦：membership@theinitium.com</p>
