--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>端会员landing page</title>
+    <title>端會員</title>
     <link href="styles/style.css" rel="stylesheet">
   </head>
   <body>
