--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           事實上，這並不只是一個人，或者某一個小團體的工作。它原本就是一個更廣泛的參與過程，身處這時代不同位置的人，都分享對世界的熱情和理解它的過程，正如我們過去廣泛尋找全世界的創作者、撰稿人、意見提供者以及讀者，一起建構端時，希望努力的那樣。
         </p>
         <p>
-        上線十九個月以來，我們有幸能夠跟數千位華語世界的優秀創作者一道，在這個平台上記錄我們所身處的時代，并跟數以百萬計來自世界各地的讀者坦誠交流。
+        上線十九個月以來，我們有幸能夠跟數千位華語世界的優秀創作者一道，在這個平台上記錄我們所身處的時代，並跟數以百萬計來自世界各地的讀者坦誠交流。
         </p>
         <p>
         我們想找到你們，需要你們的支持；我們更想創造一個空間，讓你們找到彼此。
@@ -337,7 +337,7 @@
           <ul>
     			<li>會員活動特權：每月至少一次，獲得端傳媒舉辦的各類付費活動（沙龍、論壇、讀書會、放映會、旅行）的免費或優先參與資格；</li>
           <li>僅限會員的端小聚：每月一次，端會員將被邀請跟端傳媒編輯部、撰稿人和華語世界最有影響力的KOL喝咖啡、餐敘，或參加端傳媒年會、內部派對；</li>
-          <li>端傳媒×獨立書店 Super Pass ：在港台最重要的獨立書店或人文空間，獲得「端會員」專屬的購書優惠或相關特權；</li>
+          <li>端傳媒×獨立書店 Super Pass：在港台最重要的獨立書店或人文空間，獲得「端會員」專屬的購書優惠或相關特權；</li>
           <li>會員專屬社群：加入端傳媒會員社群，結識華語世界最有想法的頭腦，參與跨越同溫層的討論和對話；</li>
           <li>會員獨家優惠：享有在端Mall購物的九折優惠；不定期享有端傳媒合作夥伴提供的獨家優惠、折扣或入場券；</li>
           <li>會員福袋：實體會員卡一張；會員定制帆布袋一個；</li>
