--- a/index.html
+++ b/index.html
@@ -322,10 +322,10 @@
     			<p>什麼是「端會員」？</p>
     		</div>
     		<div class="answer">
-    			<p>我們梳理過往經驗，整合自身所長，籌備數月后，正式推出「端會員」計劃。希望藉此回應讀者的需求和互聯網時代的新聞媒體創新趨勢，連結華語世界優質的人文資源，為端的讀者提供更為精細和深入的服務。相比通常傳統意義上的会员計劃，「端會員」更想要創造一個社群，聚集華語世界頭腦最為開放、抱持多元信念的一群人，在這裡進行跨越世代和同溫層的對話。</p>
+    			<p>我們梳理過往經驗，整合自身所長，籌備數月後，正式推出「端會員」計劃。希望藉此回應讀者的需求和互聯網時代的新聞媒體創新趨勢，連結華語世界優質的人文資源，為端的讀者提供更為精細和深入的服務。相比通常傳統意義上的會員計劃，「端會員」更想要創造一個社群，聚集華語世界頭腦最為開放、抱持多元信念的一群人，在這裏進行跨越世代和同溫層的對話。</p>
     		</div>
     		<div class="question" id="q2">
-    			<p>如何加入「端会员」？</p>
+    			<p>如何加入「端會員」？</p>
     		</div>
     		<div class="answer">
     			<p>點擊<a class="giftlink" href="https://membership.theinitium.com" target="_blank">「端會員」頁面</a>，立即購買加入。</p>
@@ -348,7 +348,7 @@
     			<p>端傳媒×獨立書店 Super Pass 可以在哪些書店使用？</p>
     		</div>
     		<div class="answer">
-    			<p>書店清單和優惠細則在<a class="giftlink" href="https://theinitium.com/article/membership-bookstore-list/" target="_blank">這裡</a>（不斷增長中......）歡迎自薦：membership@theinitium.com</p>
+    			<p>書店清單和優惠細則在<a class="giftlink" href="https://theinitium.com/article/membership-bookstore-list/" target="_blank">這裏</a>（不斷增長中......）歡迎自薦：membership@theinitium.com</p>
     		</div>
         <div class="question" id="q5">
           <p>如何獲得活動的優先報名資格？</p>
@@ -357,11 +357,11 @@
           <p>「端會員」計劃推出後，會不定期通過郵件和群組向會員發送活動訊息和參與方式。</p>
         </div>
         <div class="question" id="q6">
-          <p>可以在「端會員」社群裡做什麼？</p>
+          <p>可以在「端會員」社群裏做什麼？</p>
         </div>
         <div class="answer">
           <p>可以在「端會員」社群裡發帖、跟其他會員交流，參與線上直播或互動。端傳媒的編輯、撰稿人們也將不定期進入社群，跟大家交流。</p>
-          <p>有任何建議、疑問，都可以在社群中留言，小端將一一回复。</p>
+          <p>有任何建議、疑問，都可以在社群中留言，小端將一一回覆。</p>
         </div>
         <div class="question" id="q7">
           <p>成功購買「端會員」後會發生什麼？</p>
