--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
   <head>
   	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>端會員</title>
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>端傳媒會員計劃</title>
+    <meta name="keywords" content="the initium membership,Initium Membership,端,端會員,Initium,Initium Media">
+    <meta name="description" content="上線十九個月以來，我們有幸能夠跟數千位華語世界的優秀創作者一道，在這個平台上記錄我們所身處的時代，並跟數以百萬計來自世界各地的讀者坦誠交流。我們想找到你們，需要你們的支持；我們更想創造一個空間，讓你們找到彼此。自由的道路漫長，我們一起開端。">
+    <meta property="og:site_name" content="Initium Media">
+    <meta property="og:title" content="端傳媒會員計劃">
+    <meta property="og:image" content="https://membership.theinitium.com/img/share.jpg">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://membership.theinitium.com/">
+    <meta property="og:description" content="上線十九個月以來，我們有幸能夠跟數千位華語世界的優秀創作者一道，在這個平台上記錄我們所身處的時代，並跟數以百萬計來自世界各地的讀者坦誠交流。我們想找到你們，需要你們的支持；我們更想創造一個空間，讓你們找到彼此。自由的道路漫長，我們一起開端。">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@initiumnews">
+    <meta name="twitter:title" content="端傳媒會員計劃">
+    <meta name="twitter:description" content="上線十九個月以來，我們有幸能夠跟數千位華語世界的優秀創作者一道，在這個平台上記錄我們所身處的時代，並跟數以百萬計來自世界各地的讀者坦誠交流。我們想找到你們，需要你們的支持；我們更想創造一個空間，讓你們找到彼此。自由的道路漫長，我們一起開端。">
+    <meta name="twitter:creator" content="@initiumnews">
+    <meta name="twitter:image:src" content="https://membership.theinitium.com/img/share.jpg">
+    <link rel="shortcut icon" href="/favicon.ico">
     <link href="styles/style.css" rel="stylesheet">
   </head>
   <body>
@@ -386,4 +401,14 @@
       
     </div>
   </body>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-66625644-8', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </html>
