--- a/index.html
+++ b/index.html
@@ -211,165 +211,7 @@
         </div>
       </div>
       <div class="row">
-
-        <div id='product-component-498ea6bfab9' style="margin: 0 auto;"></div>
-        <script type="text/javascript">
-        /*<![CDATA[*/
-
-        (function () {
-          var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
-          if (window.ShopifyBuy) {
-            if (window.ShopifyBuy.UI) {
-              ShopifyBuyInit();
-            } else {
-              loadScript();
-            }
-          } else {
-            loadScript();
-          }
-
-          function loadScript() {
-            var script = document.createElement('script');
-            script.async = true;
-            script.src = scriptURL;
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
-            script.onload = ShopifyBuyInit;
-          }
-
-          function ShopifyBuyInit() {
-            var client = ShopifyBuy.buildClient({
-              domain: 'xn-gmqs35bd8s7xa.myshopify.com',
-              apiKey: '06ecb5813988e1521923eb5b9dc8bfac',
-              appId: '6',
-            });
-
-            ShopifyBuy.UI.onReady(client).then(function (ui) {
-              ui.createComponent('product', {
-                id: [7494229313],
-                node: document.getElementById('product-component-498ea6bfab9'),
-                moneyFormat: '%24%7B%7Bamount%7D%7D',
-                options: {
-          "product": {
-            "buttonDestination": "checkout",
-            "variantId": "all",
-            "width": "240px",
-            "contents": {
-              "img": false,
-              "imgWithCarousel": false,
-              "title": false,
-              "variantTitle": false,
-              "price": false,
-              "description": false,
-              "buttonWithQuantity": false,
-              "quantity": false
-            },
-            "text": {
-              "button": "加入會員"
-            },
-            "styles": {
-              "product": {
-                "@media (min-width: 601px)": {
-                  "max-width": "calc(25% - 20px)",
-                  "margin-left": "20px",
-                  "margin-bottom": "50px"
-                }
-              },
-              "button": {
-                "background-color": "#2bb6c9",
-                "padding-left": "30px",
-                "padding-right": "30px",
-                ":hover": {
-                  "background-color": "#27a4b5"
-                },
-                "border-radius": "0px",
-                ":focus": {
-                  "background-color": "#27a4b5"
-                }
-              }
-            }
-          },
-          "cart": {
-            "contents": {
-              "button": true
-            },
-            "styles": {
-              "button": {
-                "background-color": "#2bb6c9",
-                ":hover": {
-                  "background-color": "#27a4b5"
-                },
-                "border-radius": "0px",
-                ":focus": {
-                  "background-color": "#27a4b5"
-                }
-              },
-              "footer": {
-                "background-color": "#ffffff"
-              }
-            }
-          },
-          "modalProduct": {
-            "contents": {
-              "img": false,
-              "imgWithCarousel": true,
-              "variantTitle": false,
-              "buttonWithQuantity": true,
-              "button": false,
-              "quantity": false
-            },
-            "styles": {
-              "product": {
-                "@media (min-width: 601px)": {
-                  "max-width": "100%",
-                  "margin-left": "0px",
-                  "margin-bottom": "0px"
-                }
-              },
-              "button": {
-                "background-color": "#2bb6c9",
-                "padding-left": "30px",
-                "padding-right": "30px",
-                ":hover": {
-                  "background-color": "#27a4b5"
-                },
-                "border-radius": "0px",
-                ":focus": {
-                  "background-color": "#27a4b5"
-                }
-              }
-            }
-          },
-          "toggle": {
-            "styles": {
-              "toggle": {
-                "background-color": "#2bb6c9",
-                ":hover": {
-                  "background-color": "#27a4b5"
-                },
-                ":focus": {
-                  "background-color": "#27a4b5"
-                }
-              }
-            }
-          },
-          "productSet": {
-            "styles": {
-              "products": {
-                "@media (min-width: 601px)": {
-                  "margin-left": "-20px"
-                }
-              }
-            }
-          }
-        }
-              });
-            });
-          }
-        })();
-        /*]]>*/
-        </script>
-
-
+        <a class="subscribe" href="https://initiummall.com/products/initium-vip-1?utm_source=membership.theinitium.com&utm_medium=buy_button" target="_blank">成為會員</a>
         <p class="price">299HKD/年</p>
       </div>
     </div>
