--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <h4>端传媒会员优惠：凭“端传媒”会员身份可以BC会员价选购纸本书一本，并凭当天收据免费获赠港币40元以下咖啡一杯</h4>
           <!-- Book store #2 -->
           <h3>2.Boven 杂志图书馆</h3>
-          <img src="img/boven.jpg">
+          <img src="img/boven1.jpg">
           
           <p>台湾首座专属文创与专业设计之杂志主题图书馆。</p>
           <p>全球首座杂志图书馆。Boven现场藏书量约为20,000本，包括欧、美、日..等外文杂志。馆内挑选全世界超过300种以上的设计、艺术、时尚、摄影杂志，提供给创意人士灵感来源最重要的养分和精神粮食。</p>
