--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
           <p>电话号码：2384 8929</p>
           <p>营业时间：</p>
           <p>— 书店 bookstore：11:30 - 22:00</p>
-          <p>— 咖啡店 cafe：11:30 - 21:30</p>
-          <p>— 影碟店 discs store：星期一至五，14:00 to 22:00；星期六日及，12:00 to 22:00</p>
+          <p>— 咖啡店 cafe：11:30 - 22:00</p>
+          <p>— 影碟店 discs store：星期一至五，14:00 to 22:00；星期六日及公眾假期，12:00 to 22:00</p>
           <h4>端传媒会员优惠：凭“端传媒”会员身份可以BC会员价选购纸本书一本，并凭当天收据免费获赠港币40元以下咖啡一杯</h4>
           <!-- Book store #2 -->
           <h3>2.Boven 杂志图书馆</h3>
@@ -298,6 +298,30 @@
           <li>經本人確認後，加入社群</li>
           <li>定制會員福袋（10-15個工作日的製作週期）</li>
           <ul>
+        </div>
+        <div class="question" id="q8">
+          <p>我該如何在合作店家或活動現場認證我的會員身份？</p>
+        </div>
+        <div class="answer">
+          <p>我們正在加班開發「用戶中心」的會員身份標識，以及製作實體會員卡，待完成后，端會員在合作店家或活動現場展示會員卡或會員電子標識，即可完成認證。目前，端會員可通過「郵箱地址」進行身份識別。</p>
+        </div>
+        <div class="question" id="q8">
+          <p>我住在大陸或海外，該如何參加會員活動呢？</p>
+        </div>
+        <div class="answer">
+          <p>我們舉辦的線下活動或聚會，在當下會以香港、台灣為「主場」。如你在別處而不能到場參加，可以通過文字或直播等線上形式，跟我們的編輯部同事、嘉賓和其他會員進行交流。與此同時，在會員社群里結識來自整個華語世界的朋友，一起探討和分享，想必也是很難得的體驗。最後，我們會在接下來推出一些專門針對大陸會員的內容服務，敬請期待。</p>
+        </div>
+        <div class="question" id="q8">
+          <p>我是大陸讀者，不知可以用支付寶或微信支付嗎？</p>
+        </div>
+        <div class="answer">
+          <p>我們正在研究便利大陸讀者的支付選項，到時會第一時間告知大家。</p>
+        </div>
+        <div class="question" id="q8">
+          <p>我該怎麼加入端會員社群？</p>
+        </div>
+        <div class="answer">
+          <p>加入會員后，我們會跟你取得聯繫。獲得你的同意后，會邀請你加入我們的FB/Wechat會員社群。</p>
         </div>
         <div class="question" id="q8">
           <p>還有問題？</p>
