--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <p>营业时间：</p>
           <p>— 书店 bookstore：11:30 - 22:00</p>
           <p>— 咖啡店 cafe：11:30 - 22:00</p>
-          <p>— 影碟店 discs store：星期一至五，14:00 to 22:00；星期六日及公眾假期，12:00 to 22:00</p>
+          <p>— 影碟店 disc store：星期一至五，14:00 to 22:00；星期六日及公眾假期，12:00 to 22:00</p>
           <h4>端传媒会员优惠：凭“端传媒”会员身份可以BC会员价选购纸本书一本，并凭当天收据免费获赠港币40元以下咖啡一杯</h4>
           <!-- Book store #2 -->
           <h3>2.Boven 杂志图书馆</h3>
