fixed simplified Chinese

--- a/index.html
+++ b/index.html
@@ -101,67 +101,67 @@
       <div id="bsmodal" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
-          <h1>“端传媒✖️独立书店”清单 | 端会员专属优惠</h1>
+          <h1>「端傳媒✖️獨立書店」清單 | 端會員專屬優惠</h1>
           <hr>
           <!-- Book store #1 -->
           <h3>1.kubrick bc（油麻地店 Yau Ma Tei）</h3>
           <img src="img/kubrick.jpg">
-          <p>kubrick二零零一年在香港百老汇电影中心毗邻开业，名字借用电影大师Stanley Kubrick。为满足一旁电影院观众的需要，提供相应的文化食品如书籍、影碟、唱片等，致力提供更好的艺术创作平台，推动文化创作。如今香港的kubrick已经发展成为多元化的文化聚散地，以出版图书、表演艺术、阅读分享会、合作学堂、艺术展览等项目，与不同创作者和文化爱好者一起展示本土丰盛的艺术创作和生活文化。</p>
-          <p>地址：油麻地众坊街3号骏发花园 H2地舖（港铁油麻地站 C 出口, 步行约5分钟）</p>
-          <p>电话号码：2384 8929</p>
-          <p>营业时间：</p>
-          <p>— 书店 bookstore：11:30 - 22:00</p>
+          <p>kubrick二零零一年在香港百老匯電影中心毗鄰開業，名字借用電影大師Stanley Kubrick。為滿足一旁電影院觀眾的需要，提供相應的文化食品如書籍、影碟、唱片等，致力提供更好的藝術創作平台，推動文化創作。如今香港的kubrick已經發展成為多元化的文化聚散地，以出版圖書、表演藝術、閲讀分享會、合作學堂、藝術展覽等項目，與不同創作者和文化愛好者一起展示本土豐盛的藝術創作和生活文化。</p>
+          <p>地址：油麻地眾坊街3號駿發花園 H2地舖（港鐵油麻地站 C 出口, 步行約5分鐘）</p>
+          <p>電話號碼：2384 8929</p>
+          <p>營業時間：</p>
+          <p>— 書店 bookstore：11:30 - 22:00</p>
           <p>— 咖啡店 cafe：11:30 - 22:00</p>
-          <p>— 影碟店 disc store：星期一至五，14:00 to 22:00；星期六日及公眾假期，12:00 to 22:00</p>
-          <h4>端传媒会员优惠：凭“端传媒”会员身份可以BC会员价选购纸本书一本，并凭当天收据免费获赠港币40元以下咖啡一杯</h4>
+          <p>— 影碟店 disc store：星期一至五，14:00 to 22:00；星期六日及，12:00 to 22:00</p>
+          <h4>端傳媒會員優惠：憑「端傳媒」會員身份可以BC會員價選購紙本書一本，並憑當天收據免費獲贈港幣40元以下咖啡一杯</h4>
           <!-- Book store #2 -->
-          <h3>2.Boven 杂志图书馆</h3>
+          <h3>2.Boven 雜誌圖書館</h3>
           <img src="img/boven1.jpg">
           
-          <p>台湾首座专属文创与专业设计之杂志主题图书馆。</p>
-          <p>全球首座杂志图书馆。Boven现场藏书量约为20,000本，包括欧、美、日..等外文杂志。馆内挑选全世界超过300种以上的设计、艺术、时尚、摄影杂志，提供给创意人士灵感来源最重要的养分和精神粮食。</p>
-          <p>地址：台北市大安区复兴南路一段107巷5弄18号B1</p>
-          <p>电话号码：+886 2 2778 7526</p>
-          <p>营业时间：星期一至日: 12:00-22:00</p>
-          <h4>端传媒会员优惠：端会员于3月底前，免费入馆阅读一次。原非会员入馆费用 NT$300／人(day)，端会员出示凭证即可享入馆优惠 NT$200／人(day)</h4>
+          <p>台灣首座專屬文創與專業設計之雜誌主題圖書館。</p>
+          <p>全球首座雜誌圖書館。Boven現場藏書量約為20,000本，包括歐、美、日..等外文雜誌。舘內挑選全世界超過300種以上的設計、藝術、時尚、攝影雜誌，提供給創意人士靈感來源最重要的養分和精神糧食。</p>
+          <p>地址：台北市大安區復興南路一段107巷5弄18號B1</p>
+          <p>電話號碼：+886 2 2778 7526</p>
+          <p>營業時間：星期一至日: 12:00-22:00</p>
+          <h4>端傳媒會員優惠：端會員於3月底前，免費入館閲讀一次。原非會員入館費用 NT$300／人(day)，端會員出示憑證即可享入館優惠 NT$200／人(day)</h4>
 
           <!-- Book store #3 -->
-          <h3>3.香港邮意明信片航海主题咖啡厅</h3>
+          <h3>3.香港郵意明信片航海主題咖啡廳</h3>
           <img src="img/post.jpg">          
-          <p>简介：主力宣传Postcrossing文化，收集及展出世界各地邮票和明信片。邀请不同本土设计师和团体合作或自家设计，制作香港特色明信片。在这里除了可以购买、寄出明信片，客人还可以在 Cafe 中休闲享用各式咖啡和小食。</p>
-          <p>地址：湾仔安乐里地下D舖（港铁铜锣湾站 A 出口, 步行约10分钟）</p>
-          <p>电话号码：3702 1078</p>
-          <p>营业时间：星期一至日: 11:30-23:30</p>
-          <h4>端传媒会员优惠：咖啡买一送一</h4>
+          <p>簡介：主力宣傳Postcrossing文化，收集及展出世界各地郵票和明信片。邀請不同本土設計師和團體合作或自家設計，製作香港特色明信片。在這裏除了可以購買、寄出明信片，客人還可以在 Cafe 中休閒享用各式咖啡和小食。</p>
+          <p>地址：灣仔安樂里地下D舖（港鐵銅鑼灣站 A 出口, 步行約10分鐘）</p>
+          <p>電話號碼：3702 1078</p>
+          <p>營業時間：星期一至日: 11:30-23:30</p>
+          <h4>端傳媒會員優惠：咖啡買一送一</h4>
 
           <!-- Book store #4 -->
-          <h3>4.国风堂书屋(Country wind bookstore)</h3>
+          <h3>4.國風堂書屋(Country wind bookstore)</h3>
           <img src="img/country.jpg">          
-          <p>简介：外语教材专门店，儿童教材专门店。包含英语、日语、韩语、法语/德语/西班牙/俄语、其他语言、儿童、工艺等类别的书籍。 </p>
-          <p>地址：九龙旺角西洋菜南街63号 2/F(近旺角地铁站D3出口)</p>
-          <p>电话号码：2390 7099</p>
-          <p>营业时间：周一，1:00 PM - 8:00 PM；周二至周六，1:00 PM - 9:30 PM；周日，1:00 PM - 7:00 PM</p>
-          <h4>端传媒会员优惠：在店内折扣基础上再减5%（例如店内满100元九折变为八五折，台湾书及特价品无此优惠）</h4>
+          <p>簡介：外語敎材專門店，兒童敎材專門店。包含英語、日語、韓語、法語/德語/西班牙/俄語、其他語言、兒童、工藝等類別的書籍。 </p>
+          <p>地址：九龍旺角西洋菜南街63號 2/F(近旺角地鐵站D3出口)</p>
+          <p>電話號碼：2390 7099</p>
+          <p>營業時間：週一，1:00 PM - 8:00 PM；週二至週六，1:00 PM - 9:30 PM；週日，1:00 PM - 7:00 PM</p>
+          <h4>端傳媒會員優惠：在店內折扣基礎上再減5%（例如店內滿100元九折變為八五折，台灣書及特價品無此優惠）</h4>
 
           <!-- Book store #5 -->
-          <h3>5.北角森记图书猫猫书店</h3>
+          <h3>5.北角森記圖書貓貓書店</h3>
           <img src="img/cat.jpg">      
-          <p class="caption">摄：陈朗熹/端传媒</p>    
-          <p>简介：这里既是爱书者的寻宝地，也是流浪猫的安乐窝。</p>
-          <p>地址：北角英皇道193号英皇中心 地库19号</p>
-          <p>电话号码：2578 5956</p>
-          <p>营业时间：周一至周六：12:30-22:00；周日：14:30-22:00</p>
-          <h4>端传媒会员优惠：二手书七折（买满1000元再九折，特价书除外），金庸小说九折，新书全部八五折。</h4>
+          <p class="caption">攝：陳朗熹/端傳媒</p>    
+          <p>簡介：這裏既是愛書者的尋寶地，也是流浪貓的安樂窩。</p>
+          <p>地址：北角英皇道193號英皇中心 地庫19號</p>
+          <p>電話號碼：2578 5956</p>c
+          <p>營業時間：週一至週六：12:30-22:00；週日：14:30-22:00</p>
+          <h4>端傳媒會員優惠：二手書七折（買滿1000元再九折，特價書除外），金庸小說九折，新書全部八五折。</h4>
 
           <!-- Book store #6 -->
-          <h3>6.序言书室</h3>
+          <h3>6.序言書室</h3>
           <img src="img/xu.jpg">       
-          <p>简介：序言书室主要售卖及代订人文学科及社会科学之中英文学术书籍，包括︰文学、哲学、政治、社会学、历史、文化研究等。不定期举办各项文化活动，如读书会、座谈会、新书发布会等，借此推动阅读风气。</p>
-          <p>序言书室作为一间文化学术书店正是要提供一个空间，让人群聚合，互相激活对人生的感动和思考。希望书室能让人多一点思索，少一点麻木。</p>
-          <p>地址：西洋菜南街68号7字楼</p>
-          <p>电话号码：2395 0031</p>
-          <p>营业时间：下午1时至晚上11时</p>
-          <h4>端传媒会员优惠：中文书九折，英文书九五折</h4>
+          <p>簡介：序言書室主要售賣及代訂人文學科及社會科學之中英文學術書籍，包括︰文學、哲學、政治、社會學、歷史、文化研究等。不定期舉辦各項文化活動，如讀書會、座談會、新書發布會等，藉此推動閲讀風氣。</p>
+          <p>序言書室作為一間文化學術書店正是要提供一個空間，讓人群聚合，互相激活對人生的感動和思考。希望書室能讓人多一點思索，少一點麻木。</p>
+          <p>地址：西洋菜南街68號7字樓</p>
+          <p>電話號碼：2395 0031</p>
+          <p>營業時間：下午1時至晚上11時</p>
+          <h4>端傳媒會員優惠：中文書九折，英文書九五折</h4>
         </div>
       </div>
       <div class="intro">
