--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
             <ul class="description">
                 <li>享有端Mall購物九折優惠，以及其他合作夥伴不定期提供的折扣或禮券</li>
-                <li>會員定制福袋一套</li>
+                <li>會員定制福袋一套（頭200位會員限定）</li>
                 <li><a class="giftlink" href="index.html#q1">更多信息</a></li>
               </ul>
 
