--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
             <ul class="description">
                 <li>享有端Mall購物九折優惠，以及其他合作夥伴不定期提供的折扣或禮券</li>
-                <li>會員定制福袋一套（頭200位會員限定）</li>
+                <li>會員訂製福袋一套（頭200位會員限定）</li>
                 <li><a class="giftlink" href="index.html#q1">更多信息</a></li>
               </ul>
 
@@ -265,7 +265,7 @@
           <li>端傳媒×獨立書店 Super Pass：在港台最重要的獨立書店或人文空間，獲得「端會員」專屬的購書優惠或相關特權；</li>
           <li>會員專屬社群：加入端傳媒會員社群，結識華語世界最有想法的頭腦，參與跨越同溫層的討論和對話；</li>
           <li>會員獨家優惠：享有在端Mall購物的九折優惠；不定期享有端傳媒合作夥伴提供的獨家優惠、折扣或入場券；</li>
-          <li>會員福袋：實體會員卡一張；會員定制帆布袋一個；</li>
+          <li>會員福袋：實體會員卡一張；會員訂製帆布袋一個；</li>
           <li>神秘福利</li>
           </ul>
     		</div>
@@ -296,32 +296,32 @@
           <li>收到確認郵件</li>
           <li>來自端傳媒主編的一封歡迎信</li>
           <li>經本人確認後，加入社群</li>
-          <li>定制會員福袋（10-15個工作日的製作週期）</li>
+          <li>訂製會員福袋（10-15個工作日的製作週期）</li>
           <ul>
         </div>
         <div class="question" id="q8">
           <p>我該如何在合作店家或活動現場認證我的會員身份？</p>
         </div>
         <div class="answer">
-          <p>我們正在加班開發「用戶中心」的會員身份標識，以及製作實體會員卡，待完成后，端會員在合作店家或活動現場展示會員卡或會員電子標識，即可完成認證。目前，端會員可通過「郵箱地址」進行身份識別。</p>
+          <p>我們正在加班開發「用戶中心」的會員身份標識，以及製作實體會員卡，待完成後，端會員在合作店家或活動現場展示會員卡或會員電子標識，即可完成認證。目前，端會員可通過「郵箱地址」進行身份識別。</p>
         </div>
         <div class="question" id="q8">
           <p>我住在大陸或海外，該如何參加會員活動呢？</p>
         </div>
         <div class="answer">
-          <p>我們舉辦的線下活動或聚會，在當下會以香港、台灣為「主場」。如你在別處而不能到場參加，可以通過文字或直播等線上形式，跟我們的編輯部同事、嘉賓和其他會員進行交流。與此同時，在會員社群里結識來自整個華語世界的朋友，一起探討和分享，想必也是很難得的體驗。最後，我們會在接下來推出一些專門針對大陸會員的內容服務，敬請期待。</p>
+          <p>我們舉辦的線下活動或聚會，在當下會以香港、台灣為「主場」。如你在別處而不能到場參加，可以通過文字或直播等線上形式，跟我們的編輯部同事、嘉賓和其他會員進行交流。與此同時，在會員社群裏結識來自整個華語世界的朋友，一起探討和分享，想必也是很難得的體驗。最後，我們會在接下來推出一些專門針對大陸會員的內容服務，敬請期待。</p>
         </div>
         <div class="question" id="q8">
           <p>我是大陸讀者，不知可以用支付寶或微信支付嗎？</p>
         </div>
         <div class="answer">
-          <p>我們正在研究便利大陸讀者的支付選項，到時會第一時間告知大家。</p>
+          <p>目前我們已經開通支付寶付款，歡迎大陸讀者購買。</p>
         </div>
         <div class="question" id="q8">
           <p>我該怎麼加入端會員社群？</p>
         </div>
         <div class="answer">
-          <p>加入會員后，我們會跟你取得聯繫。獲得你的同意后，會邀請你加入我們的FB/Wechat會員社群。</p>
+          <p>加入會員後，我們會跟你取得聯繫。獲得你的同意後，會邀請你加入我們的FB/Wechat會員社群。</p>
         </div>
         <div class="question" id="q8">
           <p>還有問題？</p>
