change button link

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
         </div>
       </div>
       <div class="row">
-        <a class="subscribe" href="https://initiummall.com/products/initium-vip-1?utm_source=membership.theinitium.com&utm_medium=buy_button" target="_blank">成為會員</a>
-        <p class="price">299HKD/年</p>
+        <a class="subscribe" href="https://www.funding.theinitium.com/?utm_medium=buy_button&utm_source=membership.theinitium.com" target="_blank">成為會員</a>
+        <p class="price">現正眾籌</p>
       </div>
       <div class="intro">
         <br>
